framework/contracts/account/manager/tests/snapshots/adapters__reinstalling_adapter_should_be_allowed-contract10.snap
---
source: contracts/account/manager/tests/adapters.rs
expression: chain.app.borrow().dump_wasm_raw(&contract_addr)
---
- - - 98
    - 97
    - 115
    - 101
    - 95
    - 115
    - 116
    - 97
    - 116
    - 101
  - - 123
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 95
    - 99
    - 111
    - 110
    - 116
    - 114
    - 111
    - 108
    - 34
    - 58
    - 123
    - 34
    - 97
    - 100
    - 100
    - 114
    - 101
    - 115
    - 115
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 49
    - 34
    - 125
    - 44
    - 34
    - 97
    - 110
    - 115
    - 95
    - 104
    - 111
    - 115
    - 116
    - 34
    - 58
    - 123
    - 34
    - 97
    - 100
    - 100
    - 114
    - 101
    - 115
    - 115
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 48
    - 34
    - 125
    - 125
- - - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 95
    - 105
    - 110
    - 102
    - 111
  - - 123
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 34
    - 58
    - 34
    - 116
    - 101
    - 115
    - 116
    - 101
    - 114
    - 58
    - 116
    - 101
    - 115
    - 116
    - 45
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 45
    - 105
    - 100
    - 34
    - 44
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 34
    - 58
    - 34
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
    - 34
    - 125
- - - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 95
    - 100
    - 97
    - 116
    - 97
  - - 123
    - 34
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 34
    - 58
    - 34
    - 116
    - 101
    - 115
    - 116
    - 101
    - 114
    - 58
    - 116
    - 101
    - 115
    - 116
    - 45
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 45
    - 105
    - 100
    - 34
    - 44
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 34
    - 58
    - 34
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
    - 34
    - 44
    - 34
    - 100
    - 101
    - 112
    - 101
    - 110
    - 100
    - 101
    - 110
    - 99
    - 105
    - 101
    - 115
    - 34
    - 58
    - 91
    - 93
    - 44
    - 34
    - 109
    - 101
    - 116
    - 97
    - 100
    - 97
    - 116
    - 97
    - 34
    - 58
    - 34
    - 116
    - 101
    - 115
    - 116
    - 95
    - 109
    - 101
    - 116
    - 97
    - 100
    - 97
    - 116
    - 97
    - 34
    - 125

